Use FileInputStream to bypass z/OS auto-conversion on tagged files
On z/OS with Java 21, Files.readAllBytes() (NIO) respects file encoding
tags and triggers auto-conversion. Binary files tagged as ISO8859-1 with
T=on cause EDC5122I I/O errors when NIO attempts ISO8859-1 to UTF-8
conversion. Switching to FileInputStream reads raw bytes without
auto-conversion.

Also use native.encoding system property for file list reading to
correctly handle EBCDIC-encoded file lists on z/OS with Java 21, where
JEP 400 forces Charset.defaultCharset() to UTF-8.

Signed-off-by: Jakub Balhar <jakub.balhar@broadcom.com>
Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>